# two_d_fvk_with_swelling

./: .gitignore  Makefile.am  Makefile.in  circular_disc_free_foeppl_von_karman.cc  circular_disc_free_foeppl_von_karman_simon.cc  circular_disc_fvk.cc  circular_disc_uniform_pressure_foeppl_von_karman.cc  circular_disc_uniform_pressure_foeppl_von_karman_demo.cc  clamped_square_inflation.cc  convergence.sh  euler_column_buckling_foeppl_von_karman.cc  infinite_strip_foeppl_von_karman.cc  mesh_test_foeppl_von_karman.cc  my_exact_solutions.h  plot.bash  rectangular_plate_foeppl_von_karman.cc  rectangular_pressure_cycle_foeppl_von_karman.cc  rectangular_run.bash  square_free_swelling.cc  template.bash  validate.sh
