# Name of executables: The prefix "noinst" means the executables don't
# have to be installed anywhere.
noinst_PROGRAMS = square_free_swelling      \
                  clamped_square_inflation  \
                  rectangular_plate_fvk     \
                  infinite_strip_fvk        \
                  euler_column_buckling_fvk
include $(top_srcdir)/config/makefile_templates/demo_drivers
#---------------------------------------------------------------------------

# Local sources that each code depends on:
square_free_swelling_SOURCES = \
 square_free_swelling.cc

clamped_square_inflation_SOURCES = \
 clamped_square_inflation.cc

rectangular_plate_fvk_SOURCES = \
 rectangular_plate_foeppl_von_karman.cc

infinite_strip_fvk_SOURCES = \
 infinite_strip_foeppl_von_karman.cc

euler_column_buckling_fvk_SOURCES = \
 euler_column_buckling_foeppl_von_karman.cc

#---------------------------------------------------------------------------

square_free_swelling_LDADD = -L@libdir@ -lC1_foeppl_von_karman \
 -lC1_basis -lgeneric $(EXTERNAL_LIBS) $(FLIBS)
clamped_square_inflation_LDADD = -L@libdir@ -lC1_foeppl_von_karman \
 -lC1_basis -lgeneric $(EXTERNAL_LIBS) $(FLIBS)
rectangular_plate_fvk_LDADD = -L@libdir@ -lC1_foeppl_von_karman \
 -lC1_basis -lgeneric $(EXTERNAL_LIBS) $(FLIBS)
infinite_strip_fvk_LDADD = -L@libdir@ -lC1_foeppl_von_karman \
 -lC1_basis -lgeneric $(EXTERNAL_LIBS) $(FLIBS)
euler_column_buckling_fvk_LDADD = -L@libdir@ -lC1_foeppl_von_karman \
 -lC1_basis -lgeneric $(EXTERNAL_LIBS) $(FLIBS)

# Local sources that Jack's own code depends on: This code also uses
# objects from Jack's own library. The source code for this library
# lives in user_src/jack_cool and gets compiled in to the jack_cool 
# library. If we use it, we have to link against it...
#jacks_own_code_SOURCES = jacks_own_code.cc

# Required libraries: Jack's own library ("jack_cool") and oomph-lib's 
# and "generic" and "poisson" libraries. Following the logic
# explained above, Jack's own library should go first since it may
# (or may not) depend on objects in the other libraries, whereas they will
# certainly not depend on objects in his. 
# jacks_own_code_LDADD = -L@libdir@ -ljack_cool -lpoisson -lgeneric $(EXTERNAL_LIBS) $(FLIBS)

#---------------------------------------------------------------------------


# Include path for library headers: All library headers live in 
# the include directory which we specify with -I
# Automake will replace the variable @includedir@ with the actual
# include directory.

AM_CPPFLAGS += -I@includedir@ -Wall -ggdb3 -g -DRANGE_CHECKING -DPARANOIA -O3
#EXTRA_DIST = Circle1.1.ele Circle1.1.node Circle1.1.poly
